Bug 57353 - EMF import prob - EMR_MOVETOEX does not always create new subpath
Summary: EMF import prob - EMR_MOVETOEX does not always create new subpath
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Thorsten Behrens (allotropia)
URL:
Whiteboard: target:4.0.0 target:3.6.5
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-21 00:05 UTC by Thorsten Behrens (allotropia)
Modified: 2015-01-01 09:21 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thorsten Behrens (allotropia) 2012-11-21 00:05:17 UTC
Path recording sequences like "27, 88, 27, 88,..." do not yield the same visual result when doing a FILLPATH, as "27, 88, 61, 27, 88,...", although it should (at least MSO & Windows do).

Can't easily attach sample file, it's copyrighted - anyone wanting to test this, please poke me privately.
Comment 1 Not Assigned 2012-11-21 08:10:22 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=33e63a1562cbb63b6db36812d159eac2cfa8fcc7

Fix fdo#57353 correct moveTo handling for emf path recording



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Not Assigned 2012-11-21 15:20:33 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b740f2aeff67278c6f1741088a9be25aa823a8aa&g=libreoffice-3-6

Fix fdo#57353 correct moveTo handling for emf path recording


It will be available in LibreOffice 3.6.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.