Fix fdo#57353 correct moveTo handling for emf path recording

A moveTo following an existing path really should create a new
subpath, not add to the existing one. It's the equivalent of lifting
the pen.

Change-Id: I196ca9435f8b4225837add964aec7afceb1d6d88